--- a/index.html
+++ b/index.html
@@ -3,13 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"><link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bai+Jamjuree:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
     <main>
-        <div>
+        <div class="passo ativo" id="passo-0">
             <p>um dia desses, dentro de um livro da biblioteca do colégio,
                 eu descobri uma carta antiga sobre uma cidade perdida,
                 escondida por riqueza e beleza naturais.
@@ -21,13 +23,13 @@
 
 
             </p>
-            <button></button>
-            <button></button>
+            <button> class="btn-proximo" data-proximo="1">curitiba</button>
+            <button> class="btn-proximo" data-proximo="2">campina grande do sul</button>
         </div>
-        <div>
-            <p></p>
-            <button></button>
-            <button></button>
+        <div class="passo" id="passo-1">
+            <p>voce chegou a curitiba, a cidade dos centros historicos, descendo a primeira pista1</p>
+            <button class="btn-proximo" data-proximo="3">procurar a pista do Parque Barigui</button>
+            <button class="btn-proximo" data-proximo="4">desistir e ir para casas</button>
         </div>
     </main>
 </body>
