--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"><link rel="preconnect" href="https://fonts.googleapis.com">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bai+Jamjuree:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
@@ -12,25 +13,29 @@
 <body>
     <main>
         <div class="passo ativo" id="passo-0">
-            <p>um dia desses, dentro de um livro da biblioteca do colégio,
+            <img src="cenario-passo0.png" alt="cenario-passo0">
+            <p>Um dias desses, dentro de um livro da biblioteca do colégio,
                 eu descobri uma carta antiga sobre uma cidade perdida,
-                escondida por riqueza e beleza naturais.
-                nesse 
-
-
-
-
-
-
+                escondida por riquezas e belezas naturais.
+                Nessa carta, a autora deixa algumas pistas para
+                encontrar essa cidade e eu decidi segui-las!
             </p>
-            <button> class="btn-proximo" data-proximo="1">curitiba</button>
-            <button> class="btn-proximo" data-proximo="2">campina grande do sul</button>
+            <button class="btn-proximo" data-proximo="1">Curitiba</button>
+            <button class="btn-proximo" data-proximo="2">Paranaguá</button>
+        </div>
+        <div class="passo" id="passo-2">
+         <p>em Paranaguá, Você visita a parte historica da cidade.
+            na carta, uma das pistas indica que para localizar a entrada para a cidade perdida Você deve Procurar
+            a proxima pista em um dos pontos turisticos da cidade. por qual Você começasssss
+         </p>
+            </p>
         </div>
         <div class="passo" id="passo-1">
-            <p>voce chegou a curitiba, a cidade dos centros historicos, descendo a primeira pista1</p>
-            <button class="btn-proximo" data-proximo="3">procurar a pista do Parque Barigui</button>
-            <button class="btn-proximo" data-proximo="4">desistir e ir para casas</button>
+            <P> Você chegou à Curitiba, descendo a Serra do Mar, para encontrar a primeira pista</P>
+            <button class="btn-proximo" data-proximo="3">Procurar a pista no jardim botânico</button>
+            <button class="btn-proximo" data-proximo="4">Desistir e ir para casa</button>
         </div>
     </main>
 </body>
 </html>
+
